--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,7 +15,9 @@ jobs:
         run: make install
       - name: lint
         run: make lint
-      - name: format
-        run: make format
       - name: test
         run: make test
+      - name: format
+        run: make format
+      - name: generate_and_push
+        run: make generate_and_push
